<resources>
    <string name="app_name">Smart Stick</string>
    <string name="sign_in">Sign in </string>
    <string name="sign_up">Sign up </string>
    <string name="google">Google </string>
    <string name="rememberMe">Remember Me </string>
    <string name="forgotPassword">Forget Password? </string>
    <string name="resetPassword">Reset Password </string>
    <string name="welcome">Welcome</string>
    <string name="back">GoBack</string>
    <string name="phoneNumber">Phone  </string>
    <string name="notRegistered">Don\'t have an Account?</string>
    <string name="havingAccount">Already have An Account?</string>

    <string name="open">Open</string>
    <string name="close">Close</string>

    <!--- hints. -->
    <string name="username">User Name </string>
    <string name="email">Email </string>
    <string name="password"> Password </string>
    <string name="confirmPassword">Confirm Password </string>
    <string name="phone">Phone Number </string>
    <string name="profile">Profile</string>
    <string name="title_activity_maps">MapsActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_request">Add Request</string>
    <string name="userEmail">name@gmail.com</string>
    <string name="name">Name</string>
    <string name="jolly_adam">Jolly Adam</string>
    <string name="phone_number">01236589548</string>
    <string name="phone_numbertV">Phone Number</string>
    <string name="edit_password">0*******</string>
    <string name="your_location">Your Location</string>
    <string name="location">El-Nozha</string>
    <string name="save">Save</string>
    <string name="update">Update</string>
    <string name="update_location">Update Location</string>
    <string name="date_and_time">Date and Time</string>
    <string name="make_call">Make Call</string>
    <string name="go_to_home">Go To Home</string>
    <string name="navigate_to_go_to">(navigate to | go to ) (.+)</string>
    <string name="last_seen">  Last Seen: </string>
    <string name="my_holders">My Holders</string>
    <string name="home">Home</string>
    <string name="home_bottom">Home</string>
    <string name="search">Search</string>
    <string name="profile_bottom">Profile</string>
    <string name="logout">Logout</string>
    <string name="relative_number">Relative Number</string>
    <string name="last_seen_">Last Seen :</string>
    <string name="address">Address</string>
    <string name="get_location">Get Location</string>
</resources>