<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HolderFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_navigation"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_margin="@dimen/spacing_medium"
        app:cardCornerRadius="@dimen/spacing_medium"
        android:contentDescription="@string/go_to_home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/primary_200">

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/lottie_Placeholder"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="@dimen/spacing_medium"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/person_navigation" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/go_to_home"
                android:textSize="@dimen/text_Xgiant"
                android:textColor="@color/white_100"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:fontFamily="sans-serif-medium"
                app:layout_constraintStart_toEndOf="@+id/lottie_Placeholder"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:id="@+id/card_make_call"
        android:layout_margin="@dimen/spacing_medium"
        app:cardCornerRadius="@dimen/spacing_medium"
        android:elevation="@dimen/spacing_small"
        android:contentDescription="@string/make_call"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_navigation">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/primary_200">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/navigation"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="@dimen/spacing_small"
                android:layout_marginVertical="@dimen/spacing_small"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@drawable/call" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/make_call"
                android:textSize="@dimen/text_Xgiant"
                android:textColor="@color/white_100"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/navigation"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_date"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_margin="@dimen/spacing_medium"
        app:cardCornerRadius="@dimen/spacing_medium"
        android:elevation="@dimen/spacing_small"
        android:contentDescription="@string/date_and_time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_make_call">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/primary_200">

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_margin="@dimen/spacing_small"
                android:id="@+id/date_time"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="@dimen/spacing_medium"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                android:src="@drawable/date" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_and_time"
                android:textColor="@color/white_100"
                android:textSize="@dimen/text_Xgiant"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:fontFamily="sans-serif-medium"
                app:layout_constraintStart_toEndOf="@+id/date_time"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/start_record"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:visibility="visible"
        android:layout_marginTop="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_date"
        app:layout_constraintVertical_bias="0.0"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/record" />

</androidx.constraintlayout.widget.ConstraintLayout>